improved getCardsSortedByCount